--- a/angularApp/app/customer/customer-new-component/customer-new-component.html
+++ b/angularApp/app/customer/customer-new-component/customer-new-component.html
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="update-img">
-                            <div [formGroup]="form">                         
+                            <div>                         
                                 <kendo-upload
                                     [autoUpload]="true"
                                     [saveUrl]="uploadSaveUrl"
@@ -60,8 +60,8 @@
     
                            
                         </form>
-                        <!-- {{formCustomerInformation.valid}}
-                        {{ formCustomerInformation.value | json }} -->
+                        {{formCustomerInformation.valid}}
+                        {{ formCustomerInformation.value | json }}
                     </div>
                 </div>
             </ng-template>            
